workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__endpoint__test__can_handle_remove_path_component_command__new_events.snap
---
source: workspaces/optic-engine-native/src/commands/endpoint.rs
expression: new_events
---
[
    PathComponentRemoved(
        PathComponentRemoved {
            path_id: "path_1",
            event_context: None,
        },
    ),
]
